--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: config-server
+    name: config-default-server
 eureka:
   client:
     register-with-eureka: true
