--- a/application.yml
+++ b/application.yml
@@ -5,6 +5,6 @@ eureka:
   client:
     register-with-eureka: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka/
   instance:
    preferIpAddress: true
