--- a/application.yml
+++ b/application.yml
@@ -1,10 +1,11 @@
+eureka:
+  instance:
+    preferIpAddress: 'true'
+  client:
+    register-with-eureka: 'true'
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
 spring:
   application:
     name: config-server
-eureka:
-  client:
-    register-with-eureka: true
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
-  instance:
-   preferIpAddress: true
+  
